<resources>
    <string name="app_name">APP_NEST</string>
    <string name="app_owner">© 2021 </string>
    <string name="app_owner_phone">© 2021 </string>
    <string name="app_agreement">同意《用户服务协议》和《隐私政策》</string>

    <string name="home_tab_str_1">网页1</string>
    <string name="home_tab_str_2">网页2</string>
    <string name="home_tab_str_3">网页3</string>
    <string name="home_tab_str_4">网页4</string>
    <string name="home_tab_str_5">网页5</string>

    <string name="scan_tip">将码放入取景框，即可自动扫描</string>

    <string name="str_user_agreements">《用户服务协议》</string>
    <string name="str_privacy_agreements">《隐私政策》</string>
    <string name="str_disclaimer">《免责声明》</string>
    <string name="str_cancel">取消</string>
    <string name="str_confirm">确定</string>
    <string name="str_login_by_phone_number">本机号码一键登录</string>
    <string name="str_current_phone_number">本机号码：</string>
    <string name="str_login_change">切换账号</string>
    <string name="str_login_by_current_phone_number">本机号码登录</string>
    <string name="str_login_by_varcode"><u>短信登录</u></string>
    <string name="str_login_by_username">账号登录</string>
    <string name="str_login">登录</string>
    <string name="str_var_code">请输入验证码</string>
    <string name="str_phone_number">请输入手机号码</string>
    <string name="str_login_get_var_code">获取验证码</string>
    <string name="str_login_re_get_var_code">重新获取</string>
    <string name="str_change_password">忘记密码</string>
    <string name="str_password">密码</string>
    <string name="str_username">账号</string>


    <string name="str_setting_about_user_agreements">用户服务协议</string>
    <string name="str_setting_about_privacy_agreements">隐私政策</string>
    <string name="str_setting_about_disclaimer">免责声明</string>
    <string name="str_setting_about_check_update">检查更新</string>
    <string name="str_alarm_title_detail">报警详情</string>
    <string name="str_setting_about_app_owner">2021 鼎保信</string>


    <string name="str_new_password_limit">密码为6–20位，且仅限使用数字，字母或符号</string>
    <string name="str_confirm_password_hint">再次输入新密码</string>
    <string name="str_confirm_password">确认密码</string>
    <string name="str_new_password_hint">请输入新密码</string>
    <string name="str_new_password">新密码</string>
    <string name="str_old_password_hint">请输入您的旧密码</string>
    <string name="str_old_password">旧密码</string>


    <string name="register_name_digits">._0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
</resources>