<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayF9F9F9"
    android:orientation="vertical">

    <include
        android:id="@+id/title_bar"
        layout="@layout/include_title_bar" />

    <LinearLayout style="@style/SettingItemLayoutStyle">

        <TextView
            style="@style/SettingItemTitleStyle"
            android:text="@string/str_old_password" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/ed_old_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:cursorVisible="true"
                android:digits="@string/register_name_digits"
                android:gravity="end"
                android:hint="@string/str_old_password_hint"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLength="20"
                android:paddingEnd="20dp"
                android:text=""
                android:textColor="@color/black333333"
                android:textCursorDrawable="@null"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/toggle_old_password_visible"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="end|center_vertical"
                android:src="@mipmap/icon_password_invisible" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/SettingItemLayoutStyle"
        android:layout_marginTop="20dp">

        <TextView
            style="@style/SettingItemTitleStyle"
            android:text="@string/str_new_password" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/ed_new_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:cursorVisible="true"
                android:digits="@string/register_name_digits"
                android:gravity="end"
                android:hint="@string/str_new_password_hint"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLength="20"
                android:paddingEnd="20dp"
                android:text=""
                android:textColor="@color/black333333"
                android:textCursorDrawable="@null"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/toggle_new_password_visible"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="end|center_vertical"
                android:src="@mipmap/icon_password_invisible" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/SettingItemLayoutStyle"
        android:layout_marginTop="1dp">

        <TextView
            style="@style/SettingItemTitleStyle"
            android:text="@string/str_confirm_password" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ed_new_password_confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:cursorVisible="true"
                android:digits="@string/register_name_digits"
                android:gravity="end"
                android:hint="@string/str_confirm_password_hint"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLength="20"
                android:paddingEnd="20dp"
                android:text=""
                android:textColor="@color/black333333"
                android:textCursorDrawable="@null"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/toggle_new_password_confirm_visible"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="end|center_vertical" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/str_new_password_limit"
        android:textSize="12sp" />
</LinearLayout>